--- a/json/projects.json
+++ b/json/projects.json
@@ -6,7 +6,7 @@
       "description": "سایت‌های بانکی، آموزشی، خدمات عمومی داخل ایران",
       "status": "completed",
       "collaborators": [1, 2],
-      "pageLink": "/projects/sites"
+      "pageLink": "ir.html"
     },
     {
       "id": 2,
