--- a/json/manifest.json
+++ b/json/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ایران اکسس",
-  "short_name": "ایران اکسس",
+  "name": "برای ایران",
+  "short_name": "برای ایران",
   "description": "دسترسی به اطلاعات ضروری هنگام قطعی اینترنت بین‌المللی",
   "start_url": "/",
   "display": "standalone",
