--- a/json/projects.json
+++ b/json/projects.json
@@ -28,7 +28,7 @@
       "id": 4,
       "title": "شرکت‌های حامی مردم",
       "description": "برندها یا مجموعه‌هایی که با مردم در بحران‌ها همراهی کردند",
-      "status": "completed",
+      "status": "in_progress",
       "collaborators": [1],
       "pageLink": "businesses.html"
     },
