--- a/json/projects.json
+++ b/json/projects.json
@@ -42,7 +42,7 @@
     },
 	{
       "id": 6,
-      "title": "شماره های اضظراری",
+      "title": "شماره های اضطراری",
       "description": "حتما ذخیره کنید",
       "status": "completed",
       "collaborators": [1, 4],
