--- a/json/projects.json
+++ b/json/projects.json
@@ -3,6 +3,7 @@
     {
       "id": 1,
       "title": "سایت‌های کاربردی و داخلی",
+      "shortTitle": "سایت‌های کاربردی",
       "description": "سایت‌های بانکی، آموزشی، خدمات عمومی داخل ایران",
       "status": "completed",
       "collaborators": [1, 4],
@@ -19,6 +20,7 @@
     {
       "id": 3,
       "title": "اقامتگاه‌های رایگان یا ارزان",
+      "shortTitle": "اقامتگاه‌ها",
       "description": "خانه‌های امن، میزبانان داوطلب، مکان‌های امن برای ماندن",
       "status": "completed",
       "collaborators": [2,1,3,5,6],
@@ -27,6 +29,7 @@
     {
       "id": 4,
       "title": "کسب و کارهای حامی مردم",
+      "shortTitle": "کسب‌وکارها",
       "description": "برندها یا مجموعه‌هایی که با مردم در بحران‌ها همراهی کردند",
       "status": "completed",
       "collaborators": [1],
@@ -43,6 +46,7 @@
 	{
       "id": 6,
       "title": "شماره های اضطراری",
+      "shortTitle": "شماره اضطراری",
       "description": "حتما ذخیره کنید",
       "status": "completed",
       "collaborators": [1, 4],
